--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,12 @@ edition = "2021"
 [dependencies]
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+clap = { version = "4", features = ["derive"] }
+rayon = "1"
+bincode = "1"
+indicatif = { version = "0.17", features = ["rayon"] }
+hashbrown = "0.14"
+ahash = "0.8"
 
 [dev-dependencies]
 pretty_assertions = "1"
@@ -17,3 +23,7 @@ path = "src/bin/tt-cli.rs"
 [[bin]]
 name = "precompute"
 path = "src/bin/precompute.rs"
+
+[[bin]]
+name = "query"
+path = "src/bin/query.rs"
