--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,10 @@ bincode = "1"
 indicatif = { version = "0.17", features = ["rayon"] }
 hashbrown = "0.14"
 ahash = "0.8"
+lz4_flex = "0.11"
+zstd = "0.13"
+crc32fast = "1.4"
+memmap2 = { version = "0.9", optional = true }
 
 [dev-dependencies]
 pretty_assertions = "1"
@@ -27,3 +31,7 @@ path = "src/bin/precompute.rs"
 [[bin]]
 name = "query"
 path = "src/bin/query.rs"
+
+[features]
+default = []
+mmap = ["memmap2"]
