--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ lz4_flex = "0.11"
 zstd = "0.13"
 crc32fast = "1.4"
 memmap2 = { version = "0.9", optional = true }
+rand = "0.8"
+rand_pcg = { version = "0.3.1" }
 
 [dev-dependencies]
 pretty_assertions = "1"
