--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ rand_pcg = { version = "0.3.1" }
 
 [dev-dependencies]
 pretty_assertions = "1"
+assert_cmd = "2"
+predicates = "3"
+tempfile = "3"
 
 [[bin]]
 name = "tt-cli"
