--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,10 @@ indicatif = { version = "0.17", features = ["rayon"] }
 hashbrown = "0.14"
 ahash = "0.8"
 lz4_flex = "0.11"
-zstd = "0.13"
+zstd = { version = "0.13", features = ["zstdmt"] }
 crc32fast = "1.4"
+sha2 = "0.10"
+hex = "0.4"
 memmap2 = { version = "0.9", optional = true }
 rand = "0.8"
 rand_pcg = { version = "0.3.1" }
