--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ hex = "0.4"
 memmap2 = { version = "0.9", optional = true }
 rand = "0.8"
 rand_pcg = { version = "0.3.1" }
+crossbeam-channel = "0.5"
 
 [dev-dependencies]
 pretty_assertions = "1"
